* fix to margins on tablet * fix to # of articles below ad on index * tablet displays CTA

--- a/static/css/partials/_page-index.scss
+++ b/static/css/partials/_page-index.scss
@@ -13,8 +13,8 @@ body.special {
 
 .site-main {
     margin-top:80px;
-    @media screen and (max-width: $sm-break-down) {
-        margin-top:10px;
+    @media screen and (max-width: $mmd-break-down) {
+        margin-top:30px;
     }
 
     margin-bottom:100px;
